--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,14 @@ Thumbs.db
 .nx/workspace-data
 .cursor/rules/nx-rules.mdc
 .github/instructions/nx.instructions.md
+
+test-output
+
+.angular
+.env
+.env.local
+
+# local sqlite database
+database.sqlite
+
+__screenshots__/
